--- a/client/perfis/views/meuPerfil.ng.html
+++ b/client/perfis/views/meuPerfil.ng.html
@@ -8,7 +8,7 @@
 
     Mais info ver: https://github.com/CollectionFS/Meteor-CollectionFS
     -->
-    <div class="col-md-3 profile-boxes">
+    <div class="col-md-3 profile-boxes picture no-padding">
     <img src="{{$root.currentUser.profile.profilePic.getFileRecord().url()}}" class="profile-picture">
     </div>
     <div class="col-md-2 profile-boxes">
