--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -417,7 +417,7 @@ textarea:focus, input:focus {
 .pesquisar{float:left !important; width:100%;height: 32px !important;}
 .btn-pesquisar{float:right !important; border:1px solid white;padding:5px; text-align: center;}
 .profile-border > *{border:1px solid white; }
-.profile-boxes{ min-height: 135px !important; }
+.profile-boxes{ min-height: 145px !important; }
 .btn-default{ background-color: transparent !important; color:#fff;}
 .profile-actions{width: 100% !important; margin:5px 0px;}
 .no-padding{padding: 0px !important;}
@@ -426,11 +426,21 @@ textarea:focus, input:focus {
 .btn:hover{color:#c9c9c9;}
 .centered{float: none !important;margin: 0 auto !important;}
 
-@media only screen and (min-width: 1200px) {
+#dirSidebar{
+border:2px solid #fff;
+background-color: #c8c8c8; 
+filter:alpha(opacity=50); 
+opacity: 0.5;
+-moz-opacity:0.5;
+-webkit-opacity:0.5;
+}
+
+
+/* @media only screen and (min-width: 1200px) {
     .container{width: 96% !important}
 =======
     border : 1px solid #fff;
-}
+} */
 
 a.color-white, a.color-white:hover {
     color : #fff;
@@ -557,18 +567,10 @@ a.color-white, a.color-white:hover {
     /* Style adjustments for viewports that meet the condition */
 }
 
-@media print,
-(-webkit-min-device-pixel-ratio : 1.25),
-(min-resolution : 1.25dppx),
-(min-resolution : 120dpi) {
+@media print, (-webkit-min-device-pixel-ratio : 1.25), (min-resolution : 1.25dppx), (min-resolution : 120dpi) {
     /* Style adjustments for high resolution devices */
 }
 
-/* ==========================================================================
-   Print styles.
-   Inlined to avoid the additional HTTP request:
-   http://www.phpied.com/delay-loading-your-print-css/
-   ========================================================================== */
 
 @media print {
     *,
@@ -577,7 +579,7 @@ a.color-white, a.color-white:hover {
         background  : transparent !important;
         color       : #000 !important;
         /* Black prints faster:
-                                          http://www.sanbeiji.com/archives/953 */
+        http://www.sanbeiji.com/archives/953 */
         box-shadow  : none !important;
         text-shadow : none !important;
     }
@@ -639,14 +641,5 @@ a.color-white, a.color-white:hover {
         page-break-after : avoid;
     }
 }
-#dirSidebar{
 
-    border:2px solid #fff;
-    background-color: #c8c8c8;
-    filter:alpha(opacity=50);
-    opacity: 0.5;
-    -moz-opacity:0.5;
-    -webkit-opacity:0.5;
-
-    
-}
+@import("maran.css");
