--- a/client/perfis/views/login.ng.html
+++ b/client/perfis/views/login.ng.html
@@ -24,7 +24,7 @@
                     <a class="btn btn-default  btn-100-percent" ng-click="login(aUser)">Logar</a>
                 </div>
 
-                <div class="text-center text-decoration-underline margin-top-30">
+                <div class="text-center text-decoration-underline margin-top-30 col-md-12">
                     <a class="color-white" href="/cadastroPerfil">Não possui uma conta? Cadastre-se</a>
                     <br><br>
                     <a class="color-white" href="/resetSenha">Esqueceu sua senha?</a>
