--- a/client/perfis/views/cadastroPerfil.ng.html
+++ b/client/perfis/views/cadastroPerfil.ng.html
@@ -46,7 +46,7 @@
                 <!-- Botões de navegação-->
                 <br/>
 
-                <div>
+                <div class="row">
                     <div class="col-md-6">
                         <button class="btn btn-default btn-100-percent" ng-click="setEtapaAnterior()">Voltar</button>
                     </div>
@@ -54,6 +54,13 @@
                         <button class="btn btn-default btn-100-percent" ng-click="setProximaEtapa()">Próximo</button>
                     </div>
                 </div>
+
+                <ul class="progressbar margin-top-30 col-md-12 float-none center-block">
+                    <li class="active"></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
             </div>
             <!-- Breve descrição-->
             <div ng-show="mostrarEtapa(1)">
@@ -62,7 +69,7 @@
                     <textarea class="lined-textarea" name="descricao" ng-model="nUser.breve_descricao" rows="20" cols="20" placeholder="Descrição Profissional"></textarea>
                 </div>
                 <!-- end row-->
-                <div class="row" style="margin-top:50px;">
+                <div class="row margin-top-30">
                     <div class="col-md-6">
                         <button class="btn btn-default btn-100-percent" ng-click="setEtapaAnterior()">Voltar</button>
                     </div>
@@ -70,6 +77,15 @@
                         <button class="btn btn-default btn-100-percent" ng-click="setProximaEtapa()">Próximo</button>
                     </div>
                 </div>
+
+                <ul class="progressbar margin-top-30 col-md-12 float-none center-block">
+                    <li class="active"></li>
+                    <li class="active"></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+
+
             </div>
             <!-- tags expertise-->
             <div ng-show="mostrarEtapa(2)">
@@ -91,7 +107,7 @@
                     <!-- end twelve columns-->
                 </div>
                 <!-- end row-->
-                <div class="row" style="margin-top:50px;">
+                <div class="row  margin-top-30">
 
                     <div class="col-md-6">
                         <button class="btn btn-default btn-100-percent" ng-click="setEtapaAnterior()">Voltar</button>
@@ -101,6 +117,14 @@
                     </div>
 
                 </div>
+
+                <ul class="progressbar margin-top-30 col-md-12 float-none center-block">
+                    <li class="active"></li>
+                    <li class="active"></li>
+                    <li class="active"></li>
+                    <li></li>
+                </ul>
+
             </div>
             <!-- Redes sociais-->
             <div ng-show="mostrarEtapa(3)">
@@ -115,13 +139,12 @@
                     <div>
                         <div class="col-md-12">
                             <div class="input-squared pull-left">
-                                <input type="checkbox" id="img-perfil-faceboox" style="margin-right: 10px;"/><label for="img-perfil-faceboox" style="font-size: 16px"></label>Utilizar mesma foto de
-                                                                                                                                                                              perfil
+                                <input type="checkbox" id="img-perfil-faceboox" style="margin-right: 10px;"/><label for="img-perfil-faceboox"></label>
                             </div>
-                            <span class="pull-left">Utilizar mesma foto de perfil</span>
+                            <span class="pull-left">Utilizar mesma foto de perfil do Facebook</span>
                         </div>
 
-                        <div class="col-md-12">
+                        <div class="col-md-12 margin-top-30">
                             <input type="file" ng-model="fileF" onchange="angular.element(this).scope().addTempImage(this.files)" value="escolher foto">
                         </div>
 
@@ -145,6 +168,14 @@
                         </div>
                     </div>
                 </div>
+
+                <ul class="progressbar margin-top-30 col-md-12 float-none center-block">
+                    <li class="active"></li>
+                    <li class="active"></li>
+                    <li class="active"></li>
+                    <li class="active"></li>
+                </ul>
+
             </div>
         </form>
     </div>
