- Commit ligado as issues #26 e #27. Telas e ajustes menores em outras issues.

--- a/client/perfis/views/login.ng.html
+++ b/client/perfis/views/login.ng.html
@@ -27,7 +27,7 @@
                 <div class="text-center text-decoration-underline margin-top-30 col-md-12">
                     <a class="color-white" href="/cadastroPerfil">Não possui uma conta? Cadastre-se</a>
                     <br><br>
-                    <a class="color-white" href="/resetSenha">Esqueceu sua senha?</a>
+                    <a class="color-white" href="/recuperar-senha">Esqueceu sua senha?</a>
                 </div>
             </div>
         </form>
