--- a/client/perfis/views/proximaEtapa.ng.html
+++ b/client/perfis/views/proximaEtapa.ng.html
@@ -1,7 +1,7 @@
-<div class="login-home frame-form container text-center space-header">
+<div class="login-home frame-form text-center space-header">
     <form class="login-form frame-spaces">
-        <div class="row ">
-            <div class="twelve columns container">
+        <div class="row">
+            <div>
                 <img  class="img-responsive center-block" src="../resources/Logo-Agripa.png"/>
                 <h4 class="text-center">Cadastro concluído com sucesso</h4>
                 <h4 class="text-center">O que deseja fazer agora?</h4><br/>
