--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -370,12 +370,11 @@ textarea:focus, input:focus {
 .progressbar {
     margin-bottom : 30px;
     overflow      : hidden;
-    margin-left: 45px;
 }
 
 .progressbar li {
     list-style-type : none;
-    width           : 100px;
+    width           : 95px;
     float           : left;
     position        : relative;
 }
@@ -391,7 +390,7 @@ textarea:focus, input:focus {
 
 .progressbar li:after {
     content    : '';
-    width      : 85px;
+    width      : 80px;
     height     : 2px;
     background : #fff;
     position   : absolute;
@@ -401,6 +400,9 @@ textarea:focus, input:focus {
 
 .progressbar li:last-child:after {
     content : none;
+}
+.progressbar li:last-child {
+    width       : 15px;
 }
 
 .progressbar li.active:before,
