cadastro de empresas incluido

--- a/client/perfis/views/meuPerfil.ng.html
+++ b/client/perfis/views/meuPerfil.ng.html
@@ -38,7 +38,7 @@
         <div>
             media de avaliações
         </div>
-        <div class="col-md-12"><b class="horas-mentorias">19 hs</b> de mentoria</div>
+        <div class="col-md-12"><b class="horas-mentorias">{{$root.currentUser.stars}} hs</b> de mentoria</div>
         <div class="col-md-12"><b class="horas-mentorias">9</b> badges</div>
       </div>
     </div>
