--- a/client/perfis/views/cadastroPerfil.ng.html
+++ b/client/perfis/views/cadastroPerfil.ng.html
@@ -1,5 +1,5 @@
 <!--Form do cadastro do perfil.-->
-<div class="col-md-4 float-none center-block">
+<div class="col-lg-5 col-md-6 col-sm-7 col-xs-11 float-none center-block">
     <div class="login-home frame-form text-center space-header">
         <form class="login-form frame-spaces">
             <div ng-show="mostrarEtapa(0)">
@@ -16,13 +16,14 @@
                 <br/>
 
                 <div class="row">
-                    <div class="col-md-6">
+                    <small class="visible-xs text-left col-xs-12">Perfil <br></small>
+                    <div class="col-sm-6  col-xs-11">
                         <div class="input-squared pull-left">
                             <input type="radio" ng-model="nUser.tipo_conta" id="mentor" name="role" value="mentor"><label for="mentor"></label>
                         </div>
                         <span class="pull-left">Mentor</span>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-sm-6  col-xs-11">
                         <div class="input-squared pull-left">
                             <input type="radio" ng-model="nUser.tipo_conta" name="role" id="empreendedor" value="empreendedor"><label for="empreendedor"></label>
                         </div>
@@ -30,13 +31,14 @@
                     </div>
                     <br/><br/>
 
-                    <div class="col-md-6">
+                    <small class="visible-xs text-left col-xs-12">Genero <br></small>
+                    <div class="col-sm-6  col-xs-11">
                         <div class="input-squared pull-left">
                             <input type="radio" ng-model="nUser.genero" id="masculino" name="genero" value="masculino"><label for="masculino"></label>
                         </div>
                         <span class="pull-left">Masculino</span>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-sm-6  col-xs-11">
                         <div class="input-squared pull-left">
                             <input type="radio" ng-model="nUser.genero" name="genero" id="feminino" value="feminino"><label for="feminino"></label>
                         </div>
@@ -50,17 +52,20 @@
                     <div class="col-md-6">
                         <button class="btn btn-default btn-100-percent" ng-click="setEtapaAnterior()">Voltar</button>
                     </div>
+                    <div class="margin-top-30 visible-xs"></div>
                     <div class="col-md-6">
                         <button class="btn btn-default btn-100-percent" ng-click="setProximaEtapa()">Próximo</button>
                     </div>
                 </div>
 
-                <ul class="progressbar margin-top-30 col-md-12 float-none center-block">
-                    <li class="active"></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                </ul>
+                <div class="">
+                    <ul class="progressbar margin-top-30 col-lg-8 float-none center-block">
+                        <li class="active"></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
             </div>
             <!-- Breve descrição-->
             <div ng-show="mostrarEtapa(1)">
@@ -73,12 +78,13 @@
                     <div class="col-md-6">
                         <button class="btn btn-default btn-100-percent" ng-click="setEtapaAnterior()">Voltar</button>
                     </div>
+                    <div class="margin-top-30 visible-xs"></div>
                     <div class="col-md-6">
                         <button class="btn btn-default btn-100-percent" ng-click="setProximaEtapa()">Próximo</button>
                     </div>
                 </div>
 
-                <ul class="progressbar margin-top-30 col-md-12 float-none center-block">
+                <ul class="progressbar margin-top-30 col-lg-8 float-none center-block">
                     <li class="active"></li>
                     <li class="active"></li>
                     <li></li>
@@ -112,13 +118,14 @@
                     <div class="col-md-6">
                         <button class="btn btn-default btn-100-percent" ng-click="setEtapaAnterior()">Voltar</button>
                     </div>
+                    <div class="margin-top-30 visible-xs"></div>
                     <div class="col-md-6">
                         <button class="btn btn-default btn-100-percent" ng-click="setProximaEtapa()">Próximo</button>
                     </div>
 
                 </div>
 
-                <ul class="progressbar margin-top-30 col-md-12 float-none center-block">
+                <ul class="progressbar margin-top-30 col-lg-8 float-none center-block">
                     <li class="active"></li>
                     <li class="active"></li>
                     <li class="active"></li>
@@ -163,13 +170,14 @@
                         <div class="col-md-6">
                             <button class="btn btn-default btn-100-percent" ng-click="setEtapaAnterior()">Voltar</button>
                         </div>
+                        <div class="margin-top-30 visible-xs"></div>
                         <div class="col-md-6">
                             <button class="btn btn-default btn-100-percent" ng-click="pc.register(nUser)">Concluir</button>
                         </div>
                     </div>
                 </div>
 
-                <ul class="progressbar margin-top-30 col-md-12 float-none center-block">
+                <ul class="progressbar margin-top-30 col-lg-8 float-none center-block">
                     <li class="active"></li>
                     <li class="active"></li>
                     <li class="active"></li>
