- Commit ligado a issue #19. E correcoes gerais no responsivo.

--- a/client/perfis/views/cadastroPerfil.ng.html
+++ b/client/perfis/views/cadastroPerfil.ng.html
@@ -1,6 +1,6 @@
 <!--Form do cadastro do perfil.-->
 <div class="col-lg-5 col-md-6 col-sm-7 col-xs-11 float-none center-block">
-    <div class="login-home frame-form text-center space-header">
+    <div class="login-home frame-form text-center space-header space-footer">
         <form class="login-form frame-spaces">
             <div ng-show="mostrarEtapa(0)">
                 <div class="row">
