--- a/client/perfis/views/login.ng.html
+++ b/client/perfis/views/login.ng.html
@@ -1,4 +1,4 @@
-<div class="col-md-4 float-none center-block">
+<div class="col-lg-5 col-md-6 col-sm-7 col-xs-11 float-none center-block">
     <div class="login-home frame-form text-center space-header space-footer">
         <form class="login-form frame-spaces">
             <div class="row">
@@ -13,14 +13,14 @@
             <!-- end row-->
             <div class="row" style="margin-top:50px;">
 
-                <div class="col-lg-8">
+                <div class="col-lg-8 col-md-8">
                     <a id="button-login-linkedIn" class="btn btn-default  btn-100-percent">
                         Logar com
                         <img class="img-button-linkedin " src="../resources/logo-linkedin.png">
                     </a>
                 </div>
-
-                <div class="col-lg-4">
+                <div class="margin-top-30 visible-xs visible-sm"></div>
+                <div class="col-lg-4 col-md-4">
                     <a class="btn btn-default  btn-100-percent" ng-click="login(aUser)">Logar</a>
                 </div>
 
