--- a/client/perfis/views/proximaEtapa.ng.html
+++ b/client/perfis/views/proximaEtapa.ng.html
@@ -1,16 +1,18 @@
-<div class="login-home frame-form text-center space-header">
-    <form class="login-form frame-spaces">
-        <div class="row">
-            <div>
-                <img  class="img-responsive center-block" src="../resources/Logo-Agripa.png"/>
-                <h4 class="text-center">Cadastro concluído com sucesso</h4>
-                <h4 class="text-center">O que deseja fazer agora?</h4><br/>
+<div class="col-lg-5 col-md-6 col-sm-7 col-xs-11 float-none center-block">
+    <div class="login-home frame-form text-center space-header space-footer">
+        <form class="login-form frame-spaces">
+            <div class="row">
+                <div>
+                    <img class="img-responsive center-block" src="../resources/Logo-Agripa.png"/>
+                    <h4 class="text-center">Cadastro concluído com sucesso</h4>
+                    <h4 class="text-center">O que deseja fazer agora?</h4><br/>
 
-                <a class="button" href="/cadastroEmpresa">Cadastrar Empresa</a>
-                <br/>
-                <a class="button" href="/perfil">Visualizar Perfil</a>
+                    <a class="button" href="/cadastroEmpresa">Cadastrar Empresa</a>
+                    <br/>
+                    <a class="button" href="/perfil">Visualizar Perfil</a>
+                </div>
+                <!-- end six columns-->
             </div>
-            <!-- end six columns-->
-        </div>
-    </form>
+        </form>
+    </div>
 </div>
