--- a/client/perfis/views/recuperar-senha.ng.html
+++ b/client/perfis/views/recuperar-senha.ng.html
@@ -1,4 +1,4 @@
-<div class="col-md-4 float-none center-block">
+<div class="col-lg-5 col-md-6 col-sm-7 col-xs-11 float-none center-block">
     <div class="login-home frame-form text-center space-header space-footer">
         <form class="login-form frame-spaces">
             <div class="row">
