- Commit ligado a issue #36. Icones das marcas inseridos e sinal  de '+' também. Falta apenas inserir o composrtamento. Se precisar eu volto para personalizar a box preta.

--- a/client/perfis/views/cadastroPerfil.ng.html
+++ b/client/perfis/views/cadastroPerfil.ng.html
@@ -138,9 +138,11 @@
                 <div class="row">
                     <img class="img-responsive center-block" src="../resources/Logo-Agripa.png"/>
 
-                    <input type="text" name="facebook" ng-model="nUser.facebook" placeholder="facebook">
-                    <input type="text" name="twitter" ng-model="nUser.twitter" placeholder="@twitter">
-                    <input type="text" name="linkedIn" ng-model="nUser.linkedIn" placeholder="linkedin">
+                    <div id="input-midias-sociais" class="margin-top-30">
+                        <input type="text" readonly name="facebook" ng-model="nUser.facebook" placeholder=""><span>+</span><br><br>
+                        <input type="text" readonly name="twitter" ng-model="nUser.twitter" placeholder=""><span>+</span><br><br>
+                        <input type="text" readonly name="linkedIn" ng-model="nUser.linkedIn" placeholder=""><span>+</span>
+                    </div>
                     <br><br/>
 
                     <div>
