--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -215,6 +215,34 @@ textarea:focus, input:focus {
 
 /*General End*/
 
+#input-midias-sociais span {
+    position : absolute;
+    right    : 37px;
+    padding  : 2px 10px;
+    border   : 1px solid #FFF;
+    cursor   : pointer;
+}
+
+#input-midias-sociais input {
+    background-size     : 80px auto;
+    background-repeat   : no-repeat;
+    background-position : 15px center;
+    padding-left        : 100px;
+    cursor              : pointer;
+}
+
+#input-midias-sociais input[name=facebook] {
+    background-image : url("/resources/Logo-Facebook.png");
+}
+
+#input-midias-sociais input[name=twitter] {
+    background-image : url("/resources/Logo-Twitter.png");
+}
+
+#input-midias-sociais input[name=linkedIn] {
+    background-image : url("/resources/logo-linkedin.png");
+}
+
 .profile-picture {
     width  : 200px;
     height : 115px;
