--- a/client/perfis/views/proximaEtapa.ng.html
+++ b/client/perfis/views/proximaEtapa.ng.html
@@ -4,12 +4,18 @@
             <div class="row">
                 <div>
                     <img class="img-responsive center-block" src="../resources/Logo-Agripa.png"/>
-                    <h4 class="text-center">Cadastro concluído com sucesso</h4>
+                    <h4 class="text-center margin-top-30">Cadastro concluído com sucesso</h4>
                     <h4 class="text-center">O que deseja fazer agora?</h4><br/>
 
-                    <a class="button" href="/cadastroEmpresa">Cadastrar Empresa</a>
-                    <br/>
-                    <a class="button" href="/perfil">Visualizar Perfil</a>
+                    <div class="row">
+                        <div class="col-md-6 center-block float-none">
+                            <a class="btn btn-default btn-100-percent" href="/cadastroEmpresa">Cadastrar Empresa</a>
+                        </div>
+                        <div class="col-md-6 center-block float-none margin-top-30">
+                            <a class="btn btn-default btn-100-percent" href="/perfil">Visualizar Perfil</a>
+                        </div>
+                    </div>
+
                 </div>
                 <!-- end six columns-->
             </div>
