--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -701,6 +701,10 @@ a.color-white, a.color-white:hover {
         border            : 1px solid #999;
         page-break-inside : avoid;
     }
+    /*Full callendar options, colors, etc*/
+
+    
+    /*fim dos estilos do full callendar*/
 
     /*
      * Printing Tables:
