- Commit ligado a issue #17.

--- a/client/perfis/views/painel-controle.ng.html
+++ b/client/perfis/views/painel-controle.ng.html
@@ -1,51 +1,150 @@
-<div class="container">
+<div class="container" id="painel-controle">
 
     <div class="col-md-5">
         <div class="col-md-6">
             <h3>Empresas</h3>
-            <ul>
-                <li><span class="col-md-3">A</span><span class="col-md-9"></span></li>
-                <li>B</li>
-                <li>C</li>
-                <li>D</li>
-                <li>E</li>
-                <li>F</li>
-                <li><span class="col-md-3">G</span><span class="col-md-9"></span></li>
-                <li>
-                <span class="col-md-3">
-                    <img src="http://lorempixel.com/200/200" class="img-responsive" />
-                </span>
-                <span class="col-md-9">
-                    <h5>Gist</h5>
-                    <p>Soluções em Games</p>
-                </span>
-                </li>
-                <li>H</li>
-                <li>I</li>
-                <li>J</li>
-                <li>K</li>
-                <li>L</li>
-                <li>M</li>
-                <li>N</li>
-                <li>O</li>
-                <li>P</li>
-                <li>Q</li>
-                <li>R</li>
-                <li>S</li>
-                <li>T</li>
-                <li>U</li>
-                <li>V</li>
-                <li>W</li>
-                <li>X</li>
-                <li>Y</li>
-                <li>Z</li>
-            </ul>
+
+            <div id="lista-empresas" class="lista">
+                <div><span class="col-md-3">A</span><span class="col-md-9"></span></div>
+                <div>B</div>
+                <div>C</div>
+                <div>D</div>
+                <div>E</div>
+                <div>F</div>
+                <div>
+                    <span class="col-md-3">G</span>
+                    <span class="col-md-9"></span>
+                </div>
+                <div class="item">
+                    <div class="col-md-3">
+                        <img src="http://lorempixel.com/200/200" class="img-responsive"/>
+                    </div>
+                    <div class="col-md-9">
+                        <h5>Gist</h5>
+
+                        <p>Soluções em Games</p>
+                    </div>
+                </div>
+                <div>H</div>
+                <div>I</div>
+                <div>J</div>
+                <div>K</div>
+                <div>L</div>
+                <div>M</div>
+                <div>N</div>
+                <div>O</div>
+                <div>P</div>
+                <div>Q</div>
+                <div>R</div>
+                <div>S</div>
+                <div>T</div>
+                <div>U</div>
+                <div>V</div>
+                <div>W</div>
+                <div>X</div>
+                <div>Y</div>
+                <div>Z</div>
+            </div>
         </div>
         <div class="col-md-6">
             <h3>Usuários</h3>
+
+            <div id="lista-usuarios" class="lista">
+                <div><span>A</span><span class="col-md-9"></span></div>
+                <div>B</div>
+                <div>C</div>
+                <div>D</div>
+                <div>E</div>
+                <div>F</div>
+                <div><span class="col-md-3">G</span><span class="col-md-9"></span></div>
+                <div class="item">
+                    <div class="col-md-3">
+                        <img src="http://lorempixel.com/200/200" class="img-responsive"/>
+                    </div>
+                    <div class="col-md-9">
+                        <h5>Gist</h5>
+
+                        <p>Soluções em Games</p>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="col-md-3">
+                        <img src="http://lorempixel.com/200/200" class="img-responsive"/>
+                    </div>
+                    <div class="col-md-9">
+                        <h5>Gist</h5>
+
+                        <p>Soluções em Games</p>
+                    </div>
+                </div>
+                <div>H</div>
+                <div>I</div>
+                <div>J</div>
+                <div>K</div>
+                <div>L</div>
+                <div>M</div>
+                <div>N</div>
+                <div>O</div>
+                <div>P</div>
+                <div>Q</div>
+                <div>R</div>
+                <div>S</div>
+                <div>T</div>
+                <div>U</div>
+                <div>V</div>
+                <div>W</div>
+                <div>X</div>
+                <div>Y</div>
+                <div>Z</div>
+            </div>
         </div>
     </div>
     <div class="col-md-7">
         <h3>Trajetórias</h3>
+
+        <div>
+            <div>
+                <div>
+                    <div>
+                        <div class="col-md-3">
+                            <img src="http://lorempixel.com/200/200" class="img-responsive"/>
+                        </div>
+                        <div class="col-md-9">
+                            <h5>Gist</h5>
+
+                            <p>Soluções em Games</p>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="col-md-3">
+                            <img src="http://lorempixel.com/200/200" class="img-responsive"/>
+                        </div>
+                        <div class="col-md-9">
+                            <h5>Gist</h5>
+
+                            <p>Soluções em Games</p>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <h5>Solicitação de Alteração</h5>
+
+                    <p>Etapa: <strong>Benchmarking</strong></p>
+
+                    <p>Prazo atual: <strong>10/11/2015 a 20/11/2015</strong></p>
+
+                    <p>Prazo solicitado: <strong>10/11/2015 a 22/11/2015</strong></p>
+
+                    <a href="#">Aceitar</a>
+                    <a href="#">Negar</a>
+                </div>
+                <div>
+                    <h5>Comentário</h5>
+
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A consequuntur eaque eum explicabo modi perferendis quaerat quo sequi. Autem blanditiis doloremque dolores illo impedit ipsum iure natus
+                        tempora vero vitae!</p>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
